--- a/src/components/CSS/ToolsSection.css
+++ b/src/components/CSS/ToolsSection.css
@@ -9,6 +9,7 @@
   width: 100%;
   background-color: #000000;
   position: relative;
+  z-index: 2;
 }
 
 .tools-container {
