--- a/src/components/CSS/WhatWeCreateUI.css
+++ b/src/components/CSS/WhatWeCreateUI.css
@@ -2,7 +2,7 @@
 .what-create-section {
   position: relative;
   width: 100%;
-  height: 500vh; /* Extended height - gives more time for last card */
+  height: 260vh;
   background: #000000;
 }
 
@@ -162,7 +162,7 @@
 
 @media (max-width: 768px) {
   .what-create-section {
-    min-height: 300vh;
+    height: 190vh;
   }
 
   .what-create-container {
